Amend Main Page & Detail

--- a/src/main/resources/templates/members/loginForm.html
+++ b/src/main/resources/templates/members/loginForm.html
@@ -20,7 +20,7 @@
 <content>
 
     <div class="py-5 text-center">
-        <h4>⚓로그인 해주세요</h4>
+        <h4>⚓로그인</h4>
     </div>
 
     <div class="inner">
