--- a/src/main/resources/templates/template/layoutExtend/layoutFile2.html
+++ b/src/main/resources/templates/template/layoutExtend/layoutFile2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:fragment="layout (title, links, content)" xmlns:th="http://www.thymeleaf.org">
+<html th:fragment="layout (title, style, links, content)" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title th:replace="${title}">레이아웃 타이틀</title>
@@ -11,18 +11,20 @@
     <meta name="author" content="고무라면 프로젝트" />
     <meta name="description" content="부산 맛집지도 서비스" />
     <meta name="keywords" content="맛집지도, 유튜버맛집"/>
-<!--    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">-->
     <link rel="stylesheet" th:href="@{/style.css}" />
 
     <!--    개별 css-->
     <link th:replace="${links}"/>
+    <style th:replace="${style}">
+
+    </style>
 </head>
 
 <body>
 <div class="inner">
     <div class="nav-container">
 <!--        <div><h1 class="nav-title"><a href="/">"부산, 여기는" <img src="/busan,here_logo.png" style="position: absolute; width: 50px; top: 10px"/></a></h1></div>-->
-        <div><h3 class="nav-title"><a href="/"><img src="/img/busan,here_logo.png" style="position: absolute; width: 250px; top: 20px"/></a></h3></div>
+        <div><h3 class="nav-title"><a href="/">zzz<img src="/img/busan,here_logo.png" style="position: absolute; width: 250px; top: 20px"/></a></h3></div>
 
         <th:block th:if="${loginMember == null}">
             <div>
