--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -112,7 +112,7 @@
   }
 
     /* ============================== */
-   a:link { color: red; text-decoration: none;}
+   a:link { color: black; text-decoration: none;}
    a:visited { color: black; text-decoration: none;}
    a:hover { color: black; text-decoration: none;}
 
