Make Log Using By Interceptor

--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -37,7 +37,7 @@
             integrity="sha512-bPh3uwgU5qEMipS/VOmRqynnMXGGSRv+72H/N260MQeXZIK4PG48401Bsby9Nq5P5fz7hy5UGNmC/W1Z51h2GQ=="
             crossorigin="anonymous"
             referrerpolicy="no-referrer"></script>
-    <script src="/axios-script.js"></script>
+    <script src="/js/axios-script.js"></script>
 
 </main>
 
