--- a/src/main/resources/templates/template/layoutExtend/layoutFile2.html
+++ b/src/main/resources/templates/template/layoutExtend/layoutFile2.html
@@ -11,8 +11,7 @@
     <meta name="author" content="고무라면 프로젝트" />
     <meta name="description" content="부산 맛집지도 서비스" />
     <meta name="keywords" content="맛집지도, 유튜버맛집"/>
-    <link rel="stylesheet" th:href="@{/style.css}" />
-
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
     <!--    개별 css-->
     <link th:replace="${links}"/>
     <style th:replace="${style}">
