--- a/src/main/resources/templates/template/fragments/header.html
+++ b/src/main/resources/templates/template/fragments/header.html
@@ -7,5 +7,5 @@
     <meta name="author" content="고무라면 프로젝트" />
     <meta name="description" content="부산 맛집지도 서비스" />
     <meta name="keywords" content="맛집지도, 유튜버맛집"/>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
