Develope Paging and Search

--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -3,8 +3,8 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>⚓"부산, 여기는"</title>
-    <link rel="stylesheet">
-
+<!--    <link rel="stylesheet">-->
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
 
