--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -54,7 +54,7 @@
     padding: 0.5rem;
     background: none;
     cursor: pointer;
-    font-family: inherit;
+    /* font-family: inherit; */
   }
   
   .category-title {
@@ -124,3 +124,29 @@
    .fieldError {
      color: #bd2130;
     }
+
+    /* paging ------------------------------- */
+    .paging * {box-sizing:border-box;}
+    .paging {text-align:center; margin:2% 0 0;}
+    .paging > p {display:inline-block; margin:0 4px;}
+    .paging > p > a, .paging > p > span {margin-left:-1px;}
+    .paging > p > a:first-child, .paging > p > span:first-child {margin-left:0;}
+    .paging a, .paging span {display:inline-block; width:30px; height:30px; line-height:240%; color:#999; font-size:15px;}
+    .paging a:hover {background:#f7f7f7;}
+    .paging a.on, .paging span.on {background:#666; border-color:transparent; border-radius:4px; color:#fff;}
+    .paging .page_bt {text-indent:-9999px; position:relative;}
+    .paging .page_bt::after {background-position:-30px 0; width:6px; height:11px; position:absolute; top:50%; left:50%; margin:-5px 0 0 -3px;}
+    .paging .first::after {background-position:-15px 0; width:12px; margin-left:-6px;}
+    .paging .next::after {background-position:-40px 0;}
+    .paging .last::after {background-position:-49px 0; width:12px; margin-left:-6px;}
+    .paging .prev, .paging .last {margin-left:-1px;}
+
+/* search ------------------------------- */
+h4 + .search_box {margin-top:10px;}
+.search_box:first-child {margin-top:0;}
+.search_box {background:#f7f8fa; border:1px solid #cfcfcf; box-shadow:0 2px 0px rgba(80,80,80,0.05); padding:10px 20px; margin:25px 0; overflow:hidden;}
+.search_box input[type="text"], .search_box select, .search_box button {height:40px;}
+.search_box input[type="text"], .search_box select {width:auto; padding:4px 5px; border:1px solid #ddd;}
+.search_box input[type="text"] {width:300px;}
+.sch_group button {background:#586a7d; border:0; padding:0; color:#fff; font-weight:bold; width:42px; line-height:40px; border-radius:3px; vertical-align:top; position:relative;}
+.search_box input#sDate {margin-right:3px !important;}
