--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -11,6 +11,7 @@
         .table-striped>tbody>tr:nth-child(odd)>th {
          background-color: red; // Choose your own color here
  }
+
     </style>
 
 </head>
@@ -27,15 +28,18 @@
             <section>
                 <table class="table table-striped table-bordered" border="1" cellpadding="100">
                     <colgroup>
-                        <col style="width:10%;" /><col style="width:23%;" /><col style="width:10%;" /><col style="width:23%;" />
+                        <col style="width:10%;"/>
+                        <col style="width:23%;"/>
+                        <col style="width:10%;"/>
+                        <col style="width:23%;"/>
                     </colgroup>
                     <tbody>
                     <tr>
 
                         <th scope="row">제목</th>
                         <td colspan="3">[[ ${post.title} ]]</td>
-<!--                        <th scope="row">글 유형</th>-->
-<!--                        <td th:text="${post.noticeYn == false ? '일반' : '공지'}"></td>-->
+                        <!--                        <th scope="row">글 유형</th>-->
+                        <!--                        <td th:text="${post.noticeYn == false ? '일반' : '공지'}"></td>-->
                     </tr>
 
                     <tr>
@@ -58,17 +62,18 @@
                     </tr>
                     </tbody>
                 </table>
-<!--                <p class="btn_set">-->
-<!--                    <a th:href="@{/review/new( boardId=${post.boardId} )}" class="btns btn_bdr4 btn_mid">수정</a>-->
-<!--                    <button type="button" onclick="deletePost();" class="btns btn_bdr1 btn_mid">삭제</button>-->
-<!--                    <a th:href="@{/review/list}" class="btns btn_bdr3 btn_mid">목록</a>-->
-<!--                </p>-->
+                <!--                <p class="btn_set">-->
+                <!--                    <a th:href="@{/review/new( boardId=${post.boardId} )}" class="btns btn_bdr4 btn_mid">수정</a>-->
+                <!--                    <button type="button" onclick="deletePost();" class="btns btn_bdr1 btn_mid">삭제</button>-->
+                <!--                    <a th:href="@{/review/list}" class="btns btn_bdr3 btn_mid">목록</a>-->
+                <!--                </p>-->
 
                 <div>
-                    <button type="button" class="btn btn-info" th:onclick="|location.href='@{/review/new( boardId=${post.boardId} )}'|">
+                    <button th:if="${loginMember}" type="button" class="btn btn-info"
+                            th:onclick="|location.href='@{/review/new( boardId=${post.boardId} )}'|">
                         수정
                     </button>
-                    <button type="button" class="btn btn-info" th:onclick="deletePost();">
+                    <button th:if="${loginMember}" type="button" class="btn btn-info" th:onclick="deletePost();">
                         삭제
                     </button>
                     <button type="button" class="btn btn-info" th:onclick="|location.href='@{/review/list}'|">
@@ -112,9 +117,9 @@
 
         /*]]>*/
 
-</script>
-</content>
 
+    </script>
+</content>
 
 
 </body>
