Update Search Box : add shop name

--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -12,7 +12,7 @@
     <section id="category">
         <div class="inner">
             <div class="category-container">
-                <h2 class="category-title">🍴맛집 카테고리🍴를 선택해보세요📌</h2>
+                <h2 class="category-title">🍴맛집 카테고리🍴를 선택하거나 핀을 클릭해 보세요📌</h2>
                 <div class="category-list">
                     <button class="category-item" id="korea">한식</button>
                     <button class="category-item" id="china">중식</button>
