--- a/src/main/resources/templates/review/reviewList.html
+++ b/src/main/resources/templates/review/reviewList.html
@@ -56,7 +56,7 @@
                             <col style="width:10%;"/>
                             <col style="width:20%;"/>
                             <col style="width:15%;"/>
-<!--                            <col style="width:70px;"/>-->
+                            <col style="width:70px;"/>
                         </colgroup>
                         <thead>
                         <tr class="table-primary">
@@ -66,20 +66,16 @@
                             <th scope="col">작성자</th>
                             <th scope="col">식당</th>
                             <th scope="col">등록일</th>
-<!--                            <th scope="col">조회</th>-->
+                            <th scope="col">조회</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr th:if="${not #lists.isEmpty( response )}" th:each="row, status : ${response.list}">
-                            <!--                <td><input type="checkbox"/></td>-->
-                            <!--                        <td th:text="${row.noticeYn == false ? (status.size - status.index) : '공지'}"></td>-->
-                            <!--                            <td><a th:href="@{|/review/${row.boardId}|}" th:text="${row.boardId}"></a></td>-->
-                            <!--                            <td><a th:href="@{|/review/${row.boardId}|}" th:text="${status.size - status.count + 1}"></a></td>-->
                             <td class="tl"><a th:href="@{|/review/${row.boardId}|}" th:text="${row.title}"></a></td>
                             <td th:text="${row.nickName}"></td>
                             <td th:text="${row.shopName}"></td>
                             <td th:text="${#temporals.format( row.createdAt, 'yyyy-MM-dd' )}"></td>
-<!--                            <td th:text="${row.viewCnt}"></td>-->
+                            <td th:text="${row.viewCnt}"></td>
                         </tr>
 
                         <tr th:unless="${not #lists.isEmpty( response )}">
@@ -90,14 +86,6 @@
                         </tbody>
                     </table>
                 </div>
-
-                <!--                /* 페이지네이션 */-->
-                <!--                <div class="paging inner">-->
-                <!--                    <a href="#" class="page_bt first">첫 페이지</a><a href="#" class="page_bt prev">이전 페이지 그룹</a>-->
-                <!--                    <p><span class="on">1</span><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="#">5</a><a href="#">6</a><a href="#">7</a><a href="#">8</a><a href="#">9</a><a href="#">10</a></p>-->
-                <!--                    <a href="#" class="page_bt next">다음 페이지 그룹</a><a href="#" class="page_bt last">마지막 페이지</a>-->
-                <!--                </div>-->
-                <!--/* 페이지네이션 렌더링 영역 */-->
                 <div class="paging">
 
                 </div>
@@ -206,7 +194,6 @@
                 document.querySelector('.paging').innerHTML = html;
             }
 
-
             // 페이지 이동
             function movePage(page) {
 
@@ -229,9 +216,6 @@
                  */
                 location.href = location.pathname + '?' + new URLSearchParams(queryParams).toString();
             }
-
-
-
         /*]]>*/
 
     </script>
